# VersionTesting

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: commit_message_check.yml  conda.yml
conda/: conda_build_config.yaml  meta.yaml  vertools.py
src/somepackage/: __init__.py
src/somepackage/versiontesting/: somefile.py
src/versiontesting/: __init__.py
tools/: commit_message_check.py
