[project]
name = "versiontesting"
dynamic = ["version"]
description = "Some description"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Adam McSloy", email = "a.mcsloy@bristol.ac.uk" }]
dependencies = ["packaging"]

[build-system]
requires = ["setuptools", "wheel", "python-semantic-release"]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
version_variables = ["src/versiontesting/__init__.py:__version__"]

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]